syntax = "proto3";

option go_package  = "zconfig";
option java_package = "com.zededa.cloud.uservice.proto";

import "devcommon.proto";
import "appconfig.proto";
import "netconfig.proto";
import "storage.proto";

message EdgeDevConfig {
	UUIDandVersion id = 1;
	bytes devConfigSha256 = 2;
	bytes devConfigSignature = 3;
	repeated AppInstanceConfig apps   = 4;
	repeated NetworkConfig networks = 5;
	repeated DatastoreConfig datastores = 6;
}
