
syntax = "proto3";

option java_package = "com.zededa.cloud.uservice.proto";
option go_package = "zconfig";


message SignatureInfo {
	bytes intermediatecertspem = 1;
	bytes signercertpem = 2;
	bytes signature = 3;
}

enum DsType {
	DsUnknown = 0;
	DsHttp  = 1;
	DsHttps = 2;
	DsS3    = 3;
	DsSFTP	= 4;	
}

message DatastoreConfig {
	string id = 100;

	DsType dType = 1;

	string fqdn = 2;

	string apiKey = 3;

	string password = 4;

	// depending on datastore types, it could be bucket or path
	string dpath = 5;
}


enum Format {
	FmtUnknown = 0;	
	Raw   = 1;
	QCOW  = 2;
	QCOW2 = 3;
	VHD   = 4;
	VMDK  = 5;
	OVA   = 6;
	VHDX  = 7;
}

message Image {
	string id = 100;
	
	// it could be relative path/name as well
	string name = 2;

	string sha256 = 3;

	Format iformat = 4;

	// if its signed image
	SignatureInfo siginfo = 5;

	string dsId = 6;
}

enum Target {
	Disk   = 0;
	Kernel = 1;
	Initrd = 2;
	RamDisk = 3;
}

enum DriveType {
	Unclassified = 0;
	CDROM   = 1;
	HDD     = 2;
	NET     = 3;
}


message Drive {
	Image downloadurl = 1;
	uint32 maxsize = 2;
	bool readonly = 5;
	bool preserve = 6;
	DriveType dtype = 8;
	Target target = 9;
}
